--- a/apps/blog_web/lib/blog_web/templates/layout/root.html.heex
+++ b/apps/blog_web/lib/blog_web/templates/layout/root.html.heex
@@ -14,6 +14,12 @@
       <section class="container">
         <nav>
           <ul>
+          <%= if @user_id == nil do %>
+            <li><%= link "Register", to: Routes.account_path(@conn, :register) %></li>
+            <li><%= link "Login", to: Routes.account_path(@conn, :login) %></li>
+          <% else %>
+            <li><%= link "Logout", to: Routes.user_session_path(@conn, :delete), method: :delete%></li>
+          <% end %>
           </ul>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
