feat : 임시 커밋 ( 모달 구현 중)

--- a/apps/blog_web/lib/blog_web/live/page_live.html.heex
+++ b/apps/blog_web/lib/blog_web/live/page_live.html.heex
@@ -1,3 +1,6 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Blog" %></h1>
 </section>
+<ul>
+  <li><%= live_redirect "Posts", to: Routes.live_path(@socket, BlogWeb.PostsLive) %></li>
+</ul>
