--- a/apps/blog_web/lib/blog_web/live/page_live.html.heex
+++ b/apps/blog_web/lib/blog_web/live/page_live.html.heex
@@ -2,5 +2,5 @@
   <h1><%= gettext "Welcome to %{name}!", name: "Blog" %></h1>
 </section>
 <ul>
-  <li><%= live_redirect "Posts", to: Routes.live_path(@socket, BlogWeb.PostsLive) %></li>
+  <li><%= live_redirect "Posts", to: Routes.posts_path(@socket, :index) %></li>
 </ul>
